[gd_scene load_steps=72 format=2]

[ext_resource path="res://Scenes/actor/Actor.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/flick_sprites/walking/south/0006.png" type="Texture" id=2]
[ext_resource path="res://Scripts/actor/player.gd" type="Script" id=3]
[ext_resource path="res://Scripts/actor/data_holder.gd" type="Script" id=4]
[ext_resource path="res://Scripts/actor/player/States/player_attack_state.gd" type="Script" id=5]
[ext_resource path="res://Scripts/actor/player/States/player_dead_state.gd" type="Script" id=6]
[ext_resource path="res://Art/flick_sprites/walking/west/0005.png" type="Texture" id=7]
[ext_resource path="res://Art/flick_sprites/walking/west/0002.png" type="Texture" id=8]
[ext_resource path="res://Art/flick_sprites/walking/west/0006.png" type="Texture" id=9]
[ext_resource path="res://Art/flick_sprites/walking/west/0003.png" type="Texture" id=10]
[ext_resource path="res://Art/flick_sprites/walking/west/0001.png" type="Texture" id=11]
[ext_resource path="res://Art/flick_sprites/walking/west/0011.png" type="Texture" id=12]
[ext_resource path="res://Art/flick_sprites/walking/west/0004.png" type="Texture" id=13]
[ext_resource path="res://Art/flick_sprites/walking/west/0000.png" type="Texture" id=14]
[ext_resource path="res://Art/flick_sprites/walking/west/0007.png" type="Texture" id=15]
[ext_resource path="res://Art/flick_sprites/walking/west/0008.png" type="Texture" id=16]
[ext_resource path="res://Art/flick_sprites/walking/west/0009.png" type="Texture" id=17]
[ext_resource path="res://Art/flick_sprites/walking/west/0010.png" type="Texture" id=18]
[ext_resource path="res://Art/flick_sprites/walking/south/0005.png" type="Texture" id=19]
[ext_resource path="res://Art/flick_sprites/walking/south/0011.png" type="Texture" id=20]
[ext_resource path="res://Art/flick_sprites/walking/south/0007.png" type="Texture" id=21]
[ext_resource path="res://Art/flick_sprites/walking/south/0004.png" type="Texture" id=22]
[ext_resource path="res://Art/flick_sprites/walking/south/0003.png" type="Texture" id=23]
[ext_resource path="res://Art/flick_sprites/walking/south/0000.png" type="Texture" id=24]
[ext_resource path="res://Art/flick_sprites/walking/south/0002.png" type="Texture" id=25]
[ext_resource path="res://Art/flick_sprites/walking/south/0001.png" type="Texture" id=26]
[ext_resource path="res://Art/flick_sprites/walking/south/0008.png" type="Texture" id=27]
[ext_resource path="res://Art/flick_sprites/walking/south/0010.png" type="Texture" id=28]
[ext_resource path="res://Art/flick_sprites/walking/south/0009.png" type="Texture" id=29]
[ext_resource path="res://Art/flick_sprites/walking/north/0007.png" type="Texture" id=30]
[ext_resource path="res://Art/flick_sprites/walking/north/0003.png" type="Texture" id=31]
[ext_resource path="res://Art/flick_sprites/walking/north/0005.png" type="Texture" id=32]
[ext_resource path="res://Art/flick_sprites/walking/north/0001.png" type="Texture" id=33]
[ext_resource path="res://Art/flick_sprites/walking/north/0006.png" type="Texture" id=34]
[ext_resource path="res://Art/flick_sprites/walking/north/0004.png" type="Texture" id=35]
[ext_resource path="res://Art/flick_sprites/walking/north/0002.png" type="Texture" id=36]
[ext_resource path="res://Art/flick_sprites/walking/north/0009.png" type="Texture" id=37]
[ext_resource path="res://Art/flick_sprites/walking/north/0008.png" type="Texture" id=38]
[ext_resource path="res://Art/flick_sprites/walking/north/0010.png" type="Texture" id=39]
[ext_resource path="res://Art/flick_sprites/walking/north/0011.png" type="Texture" id=40]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "attack_horizontal",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "attack_north",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 11 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 7 ), ExtResource( 9 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk_horizontal",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "attack_south",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ), ExtResource( 36 ), ExtResource( 31 ), ExtResource( 35 ), ExtResource( 32 ), ExtResource( 34 ), ExtResource( 30 ), ExtResource( 38 ), ExtResource( 37 ), ExtResource( 39 ), ExtResource( 40 ) ],
"loop": true,
"name": "walk_north",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ), ExtResource( 26 ), ExtResource( 25 ), ExtResource( 23 ), ExtResource( 22 ), ExtResource( 19 ), ExtResource( 2 ), ExtResource( 21 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 28 ), ExtResource( 20 ) ],
"loop": true,
"name": "walk_south",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 30.8618
height = 19.2618

[sub_resource type="CircleShape2D" id=3]
radius = 76.5152

[sub_resource type="Animation" id=4]
resource_name = "attack_east"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_horizontal" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackZone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackZone:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimatedSprite:flip_h")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AttackZone/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 70.0046, 11.9828 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AttackZone/CollisionShape2D:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("StateMachine/Attack")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_attack"
} ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack_north"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_north" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackZone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackZone:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackZone/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -46.6764, 1.48651 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AttackZone/CollisionShape2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("StateMachine/Attack")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_attack"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack_south"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_south" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackZone/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackZone:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackZone/CollisionShape2D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 66.001, 1.78381 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AttackZone/CollisionShape2D:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("StateMachine/Attack")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_attack"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "attack_west"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "attack_horizontal" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackZone/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AttackZone:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AttackZone/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -70.005, 11.983 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AttackZone/CollisionShape2D:rotation_degrees")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("StateMachine/Attack")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.25 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "finished_attack"
} ]
}

[sub_resource type="Animation" id=8]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_horizontal" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=9]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_north" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=10]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_south" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=11]
length = 0.6
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "walk_horizontal" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "attack_east"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "attack_west"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "attack_south"

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "attack_north"

[sub_resource type="AnimationNodeBlendSpace2D" id=16]
blend_point_0/node = SubResource( 12 )
blend_point_0/pos = Vector2( 1, 0 )
blend_point_1/node = SubResource( 13 )
blend_point_1/pos = Vector2( -1, 0 )
blend_point_2/node = SubResource( 14 )
blend_point_2/pos = Vector2( 0, 1 )
blend_point_3/node = SubResource( 15 )
blend_point_3/pos = Vector2( 0, -1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachine" id=17]

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "walk_west"

[sub_resource type="AnimationNodeAnimation" id=19]
animation = "walk_east"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "walk_north"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "walk_south"

[sub_resource type="AnimationNodeBlendSpace2D" id=22]
blend_point_0/node = SubResource( 18 )
blend_point_0/pos = Vector2( -1, 0 )
blend_point_1/node = SubResource( 19 )
blend_point_1/pos = Vector2( 1, 0 )
blend_point_2/node = SubResource( 20 )
blend_point_2/pos = Vector2( 0, -1 )
blend_point_3/node = SubResource( 21 )
blend_point_3/pos = Vector2( 0, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=25]

[sub_resource type="AnimationNodeStateMachineTransition" id=26]
switch_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachine" id=28]
states/Attack/node = SubResource( 16 )
states/Attack/position = Vector2( 254, 243 )
states/Idle/node = SubResource( 17 )
states/Idle/position = Vector2( 136, 95 )
states/Walking/node = SubResource( 22 )
states/Walking/position = Vector2( 366, 95 )
transitions = [ "Idle", "Walking", SubResource( 23 ), "Walking", "Idle", SubResource( 24 ), "Idle", "Attack", SubResource( 25 ), "Attack", "Idle", SubResource( 26 ), "Walking", "Attack", SubResource( 27 ) ]
start_node = "Idle"
graph_offset = Vector2( -150, 43 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=29]

[sub_resource type="AnimationNodeStateMachinePlayback" id=30]

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 10, 17.2347 )

[node name="Player" instance=ExtResource( 1 )]
script = ExtResource( 3 )
speed = 150.0

[node name="AnimatedSprite" parent="." index="0"]
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
animation = "attack_horizontal"
flip_h = true

[node name="CollisionShape2D" parent="." index="1"]
position = Vector2( 0, 10.97 )
rotation = 1.5708
shape = SubResource( 2 )

[node name="DebugState" parent="." index="2"]
margin_left = -21.3816
margin_top = -64.1447
margin_right = 18.6184
margin_bottom = -50.1447

[node name="Timer" type="Timer" parent="StateMachine/Movement" index="0"]

[node name="Attack" type="Node" parent="StateMachine" index="2"]
script = ExtResource( 5 )

[node name="Dead" type="Node" parent="StateMachine" index="3"]
script = ExtResource( 6 )

[node name="InteractiveArea" type="Area2D" parent="." index="4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractiveArea" index="0"]
position = Vector2( 0.667419, 13.5326 )
shape = SubResource( 3 )

[node name="DataHolder" type="Node" parent="." index="5"]
script = ExtResource( 4 )

[node name="Camera2D" type="Camera2D" parent="." index="6"]
current = true

[node name="AnimationPlayer" parent="." index="7"]
anims/attack_east = SubResource( 4 )
anims/attack_north = SubResource( 5 )
anims/attack_south = SubResource( 6 )
anims/attack_west = SubResource( 7 )
anims/walk_east = SubResource( 8 )
anims/walk_north = SubResource( 9 )
anims/walk_south = SubResource( 10 )
anims/walk_west = SubResource( 11 )

[node name="AnimationTree" parent="." index="8"]
tree_root = SubResource( 28 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 29 )
parameters/Attack/blend_position = Vector2( 0, 0 )
parameters/Idle/playback = SubResource( 30 )
parameters/Walking/blend_position = Vector2( -0.00316125, -0.0258621 )

[node name="AttackZone" type="Area2D" parent="." index="9"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackZone" index="0"]
position = Vector2( -70.005, 11.983 )
shape = SubResource( 31 )
[connection signal="body_entered" from="InteractiveArea" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="InteractiveArea" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="AttackZone" to="." method="_on_AttackZone_body_entered"]
